@@ -1,166 +1,120 @@
 package com.epam.gym.trainerworkloadservice.service;
 
-
-import com.epam.gym.trainerworkloadservice.dto.ActionType;
+import com.epam.gym.trainerworkloadservice.enums.ActionType;
 import com.epam.gym.trainerworkloadservice.dto.TrainerWorkloadRequest;
 import com.epam.gym.trainerworkloadservice.dto.TrainerWorkloadResponse;
-import com.epam.gym.trainerworkloadservice.entity.TrainerWorkload;
-import com.epam.gym.trainerworkloadservice.repository.TrainerWorkloadRepository;
+import com.epam.gym.trainerworkloadservice.entity.Trainer;
+import com.epam.gym.trainerworkloadservice.entity.TrainingMonth;
+import com.epam.gym.trainerworkloadservice.entity.TrainingYear;
+import com.epam.gym.trainerworkloadservice.mapper.TrainerWorkloadMapper;
+import com.epam.gym.trainerworkloadservice.repository.TrainerRepository;
+import com.epam.gym.trainerworkloadservice.repository.TrainingMonthRepository;
+import com.epam.gym.trainerworkloadservice.repository.TrainingYearRepository;
+import org.springframework.transaction.annotation.Transactional;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
-import org.springframework.transaction.annotation.Transactional;
 
-import java.util.*;
-import java.util.stream.Collectors;
+import java.util.Collections;
+import java.util.List;
 
 @Slf4j
 @Service
 @RequiredArgsConstructor
 public class TrainerWorkloadService {
 
-    private final TrainerWorkloadRepository workloadRepository;
+    private static final long MAX_MONTHLY_MINUTES = 44640L;
+    private final TrainerRepository trainerRepository;
+    private final TrainingYearRepository yearRepository;
+    private final TrainingMonthRepository monthRepository;
+    private final TrainerWorkloadMapper mapper;
 
     @Transactional
     public void processWorkload(TrainerWorkloadRequest request, String transactionId) {
-        log.info("[TransactionId: {}] Processing workload for trainer: {}, action: {}",
-                transactionId, request.getTrainerUsername(), request.getActionType());
-
         int year = request.getTrainingDate().getYear();
         int month = request.getTrainingDate().getMonthValue();
 
-        Optional<TrainerWorkload> existingWorkload = workloadRepository
-                .findByTrainerUsernameAndYearAndMonth(
-                        request.getTrainerUsername(), year, month);
+        Trainer trainer = trainerRepository.findByUsername(request.getTrainerUsername())
+                .orElseGet(() -> Trainer.builder()
+                        .username(request.getTrainerUsername())
+                        .firstName(request.getTrainerFirstName())
+                        .lastName(request.getTrainerLastName())
+                        .status(request.getIsActive())
+                        .build());
 
-        // TODO:
-        //  Ideally implementation of ADD/DELETE should be different only in operation sign.
-        //  The flow is same (pseudo-code):
-        //  parseDate -> (year, month) -> findExistingRecord.orElseNew -> validate boundaries
-        //  (no more than total hours in month, no less than 0) -> updateDuration -> updateOtherFields -> save
-        if (request.getActionType() == ActionType.ADD) {
-            handleAddAction(request, existingWorkload, year, month, transactionId);
-        } else if (request.getActionType() == ActionType.DELETE) {
-            handleDeleteAction(request, existingWorkload, year, month, transactionId);
-        }
+        trainer.setFirstName(request.getTrainerFirstName());
+        trainer.setLastName(request.getTrainerLastName());
+        trainer.setStatus(request.getIsActive());
+        trainerRepository.save(trainer);
 
-        log.info("[TransactionId: {}] Workload processed successfully for trainer: {}",
-                transactionId, request.getTrainerUsername());
+        TrainingYear trainingYear = yearRepository.findByTrainerAndYear(trainer, year)
+                .orElseGet(() -> TrainingYear.builder()
+                        .trainer(trainer)
+                        .year(year)
+                        .build());
+        yearRepository.save(trainingYear);
+
+        TrainingMonth trainingMonth = monthRepository
+                .findByTrainingYearAndMonth(trainingYear, month)
+                .orElseGet(() -> TrainingMonth.builder()
+                        .trainingYear(trainingYear)
+                        .month(month)
+                        .duration(0L)
+                        .build());
+
+        int sign = request.getActionType() == ActionType.ADD ? 1 : -1;
+        long newDuration = trainingMonth.getDuration() + (sign * request.getTrainingDuration());
+
+        newDuration = Math.max(0, newDuration);                   // no less than 0
+        newDuration = Math.min(MAX_MONTHLY_MINUTES, newDuration); // no more than max
+
+        trainingMonth.setDuration(newDuration);
+        monthRepository.save(trainingMonth);
+
+        log.info("[TransactionId: {}] Workload processed: trainer={}, year={}, month={}, duration={}",
+                transactionId, request.getTrainerUsername(), year, month, newDuration);
     }
 
-    private void handleAddAction(TrainerWorkloadRequest request,
-                                 Optional<TrainerWorkload> existingWorkload,
-                                 int year, int month, String transactionId) {
-        if (existingWorkload.isPresent()) {
-            TrainerWorkload workload = existingWorkload.get();
-            workload.setTrainingSummaryDuration(
-                    workload.getTrainingSummaryDuration() + request.getTrainingDuration());
-            workload.setTrainerFirstName(request.getTrainerFirstName());
-            workload.setTrainerLastName(request.getTrainerLastName());
-            workload.setTrainerStatus(request.getIsActive());
-            workloadRepository.save(workload);
-
-            log.info("[TransactionId: {}] Updated existing workload for trainer: {}, year: {}, month: {}, " +
-                            "new duration: {}",
-                    transactionId, request.getTrainerUsername(), year, month,
-                    workload.getTrainingSummaryDuration());
-        } else {
-            TrainerWorkload workload = TrainerWorkload.builder()
-                    .trainerUsername(request.getTrainerUsername())
-                    .trainerFirstName(request.getTrainerFirstName())
-                    .trainerLastName(request.getTrainerLastName())
-                    .trainerStatus(request.getIsActive())
-                    .year(year)
-                    .month(month)
-                    .trainingSummaryDuration(Long.valueOf(request.getTrainingDuration()))
-                    .build();
-            workloadRepository.save(workload);
-
-            log.info("[TransactionId: {}] Created new workload for trainer: {}, year: {}, month: {}, " +
-                            "duration: {}",
-                    transactionId, request.getTrainerUsername(), year, month,
-                    request.getTrainingDuration());
-        }
-    }
-
-    private void handleDeleteAction(TrainerWorkloadRequest request,
-                                    Optional<TrainerWorkload> existingWorkload,
-                                    int year, int month, String transactionId) {
-        if (existingWorkload.isPresent()) {
-            TrainerWorkload workload = existingWorkload.get();
-            long newDuration = workload.getTrainingSummaryDuration() - request.getTrainingDuration();
-
-            if (newDuration <= 0) {
-                workloadRepository.delete(workload);
-                log.info("[TransactionId: {}] Deleted workload record for trainer: {}, year: {}, month: {}",
-                        transactionId, request.getTrainerUsername(), year, month);
-            } else {
-                workload.setTrainingSummaryDuration(newDuration);
-                workloadRepository.save(workload);
-                log.info("[TransactionId: {}] Reduced workload for trainer: {}, year: {}, month: {}, " +
-                                "new duration: {}",
-                        transactionId, request.getTrainerUsername(), year, month, newDuration);
-            }
-        } else {
-            log.warn("[TransactionId: {}] No workload found for trainer: {}, year: {}, month: {}. " +
-                            "Cannot delete.",
-                    transactionId, request.getTrainerUsername(), year, month);
-        }
-    }
-
-    // TODO:
-    //  Probably after updating model to the nested structure you'll be able to simplify this method significantly.
-    //  Plus you can consider using mapstruct for mapping entities to DTOs
     @Transactional(readOnly = true)
-    public TrainerWorkloadResponse getTrainerWorkload(String trainerUsername, String transactionId) {
-        log.info("[TransactionId: {}] Fetching workload for trainer: {}", transactionId, trainerUsername);
+    public TrainerWorkloadResponse getTrainerWorkload(
+            String username, Integer year, Integer month, String transactionId) {
 
-        List<TrainerWorkload> workloads = workloadRepository
-                .findByTrainerUsernameOrderByYearAscMonthAsc(trainerUsername);
+        log.info("[TransactionId: {}] Fetching workload for trainer: {}", transactionId, username);
 
-        if (workloads.isEmpty()) {
-            log.info("[TransactionId: {}] No workload found for trainer: {}", transactionId, trainerUsername);
+        Trainer trainer = trainerRepository.findByUsername(username)
+                .orElse(null);
+
+        if (trainer == null) {
+            log.info("[TransactionId: {}] No trainer found: {}", transactionId, username);
             return TrainerWorkloadResponse.builder()
-                    .trainerUsername(trainerUsername)
+                    .trainerUsername(username)
                     .years(Collections.emptyList())
                     .build();
         }
 
-        // Get trainer info from first record
-        TrainerWorkload first = workloads.get(0);
-
-        // Group by year, then by month
-        Map<Integer, List<TrainerWorkload>> byYear = workloads.stream()
-                .collect(Collectors.groupingBy(TrainerWorkload::getYear, TreeMap::new, Collectors.toList()));
-
-        List<TrainerWorkloadResponse.YearSummary> yearSummaries = byYear.entrySet().stream()
-                .map(yearEntry -> {
-                    List<TrainerWorkloadResponse.MonthSummary> monthSummaries = yearEntry.getValue().stream()
-                            .map(w -> TrainerWorkloadResponse.MonthSummary.builder()
-                                    .month(w.getMonth())
-                                    .trainingSummaryDuration(w.getTrainingSummaryDuration())
-                                    .build())
-                            .sorted(Comparator.comparing(TrainerWorkloadResponse.MonthSummary::getMonth))
-                            .collect(Collectors.toList());
+        List<TrainerWorkloadResponse.YearSummary> yearSummaries = trainer.getYears().stream()
+                .filter(y -> year == null || y.getYear().equals(year))
+                .map(y -> {
+                    List<TrainerWorkloadResponse.MonthSummary> monthSummaries = y.getMonths().stream()
+                            .filter(m -> month == null || m.getMonth().equals(month))
+                            .map(m -> mapper.toMonthSummary(m))
+                            .toList();
 
                     return TrainerWorkloadResponse.YearSummary.builder()
-                            .year(yearEntry.getKey())
+                            .year(y.getYear())
                             .months(monthSummaries)
                             .build();
                 })
-                .collect(Collectors.toList());
+                .toList();
 
-        TrainerWorkloadResponse response = TrainerWorkloadResponse.builder()
-                .trainerUsername(first.getTrainerUsername())
-                .trainerFirstName(first.getTrainerFirstName())
-                .trainerLastName(first.getTrainerLastName())
-                .trainerStatus(first.getTrainerStatus())
+        log.info("[TransactionId: {}] Workload retrieved for trainer: {}", transactionId, username);
+
+        return TrainerWorkloadResponse.builder()
+                .trainerUsername(trainer.getUsername())
+                .trainerFirstName(trainer.getFirstName())
+                .trainerLastName(trainer.getLastName())
+                .trainerStatus(trainer.getStatus())
                 .years(yearSummaries)
                 .build();
-
-        log.info("[TransactionId: {}] Workload retrieved for trainer: {} with {} year entries",
-                transactionId, trainerUsername, yearSummaries.size());
-
-        return response;
     }
 }
